<resources>
    <string name="app_name">HR Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_logo">Company logo</string>
    <string name="start">Начать</string>
    <string name="company_name">ООО \"АРТ\"</string>
    <string name="company_greetings">Приветствуем Вас в нашей компании!</string>
    <string name="day">Day</string>
    <string name="standard_date">24.09.2001</string>
    <string name="working_man">working man</string>
    <string name="authorize">Войти</string>
    <string name="enter_email_hint">Введите email</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="enter">Ввод</string>
    <string name="other_authorize_variant">Или авторизуйтесь с помощью:</string>
    <string name="google">Google</string>
    <string name="is_new_user">Новый пользователь?</string>
    <string name="vk">Вконтакте</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="fast_commands">Быстрые команды</string>
    <string name="add_new_candidate">add new candidate</string>
    <string name="hr_telegram">Чат с HR в Telegram</string>
    <string name="telegram_body">Связаться для уточнения деталей</string>
    <string name="follow_the_link">Перейти</string>
    <string name="staff">Сотрудники</string>
    <string name="user_avatar">user_avatar</string>
    <string name="is_online_indicator">is online indicator</string>
    <string name="button_go_back">button go back</string>
    <string name="notifications">Уведомления</string>
    <string name="button_find">button find</string>
    <string name="notification">Уведомление</string>
    <string name="today_date">Сегодня</string>
    <string name="settings">Настройки</string>
    <string name="change_avatar">Изменить фото профиля</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="email">Email</string>
    <string name="save">Сохранить</string>
</resources>