<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal_padding">

        <LinearLayout
            android:id="@+id/header_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background"
            android:orientation="vertical"
            android:padding="@dimen/less_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_day_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standard_date"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/header_illustration"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/working_man"
                android:src="@drawable/working_man_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/authorize_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/less_padding"
            android:text="@string/authorize"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/email_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_linear"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/white_background_with_border"
            android:hint="@string/enter_email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/less_padding"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@id/password_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorize_text_view" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/white_background_with_border"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/less_padding"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@id/enter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@id/other_variants_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <TextView
            android:id="@+id/other_variants_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_authorize_variant"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@id/google_authorize_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_authorize_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_with_border"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@id/new_user_button"
            app:layout_constraintEnd_toStartOf="@id/other_authorize_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/other_variants_text_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/other_authorize_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_with_border"
            android:text="@string/vk"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/google_authorize_button"
            app:layout_constraintTop_toTopOf="@id/google_authorize_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_with_border"
            android:text="@string/is_new_user"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/google_authorize_button"
            app:layout_constraintTop_toBottomOf="@id/google_authorize_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>