<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/less_padding"
    android:background="@drawable/blue_background_smooth_corners"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/less_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/less_padding"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        tools:text="1" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/less_padding"
        android:layout_weight="0"
        android:background="@drawable/white_background_round"
        android:contentDescription="@string/user_avatar"
        android:padding="@dimen/min_padding"
        android:src="@drawable/avatar_man1_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        tools:text="@string/firstname_lastname" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="@dimen/less_padding"
        android:layout_weight="0"
        android:contentDescription="@string/is_online_indicator"
        tools:background="@drawable/green_circle" />
</LinearLayout>