<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_padding">

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname_lastname"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintStart_toStartOf="@id/welcome_text_view"
                app:layout_constraintTop_toBottomOf="@id/welcome_text_view" />

            <TextView
                android:id="@+id/fast_commands_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/less_padding"
                android:text="@string/fast_commands"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/add_candidate_button"
                app:layout_constraintStart_toStartOf="@id/welcome_text_view"
                app:layout_constraintTop_toBottomOf="@id/username_text_view" />

            <ImageButton
                android:id="@+id/add_candidate_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="@dimen/normal_padding"
                android:background="@drawable/blue_background_round"
                android:contentDescription="@string/add_new_candidate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fast_commands_text_view" />

            <ImageButton
                android:id="@+id/check_candidate_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/blue_background_round"
                android:contentDescription="@string/add_new_candidate"
                app:layout_constraintStart_toEndOf="@id/add_candidate_button"
                app:layout_constraintTop_toTopOf="@id/add_candidate_button" />

            <ImageButton
                android:id="@+id/check_notifications_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/blue_background_round"
                android:contentDescription="@string/add_new_candidate"
                app:layout_constraintStart_toEndOf="@id/check_candidate_button"
                app:layout_constraintTop_toTopOf="@id/add_candidate_button" />

            <ImageButton
                android:id="@+id/open_camera_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/blue_background_round"
                android:contentDescription="@string/add_new_candidate"
                app:layout_constraintStart_toEndOf="@id/check_notifications_button"
                app:layout_constraintTop_toTopOf="@id/add_candidate_button" />

            <LinearLayout
                android:id="@+id/telegram_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:background="@drawable/blue_background"
                android:orientation="vertical"
                android:padding="@dimen/normal_padding"
                app:layout_constraintStart_toStartOf="@id/welcome_text_view"
                app:layout_constraintTop_toBottomOf="@id/add_candidate_button">

                <TextView
                    android:id="@+id/telegram_header_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hr_telegram"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/telegram_body_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telegram_body"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/white_background"
                    android:text="@string/follow_the_link"
                    android:textAllCaps="false"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/staff_header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:text="@string/staff"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/welcome_text_view"
                app:layout_constraintTop_toBottomOf="@id/telegram_linear" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/staff_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                app:layout_constraintStart_toStartOf="@id/welcome_text_view"
                app:layout_constraintTop_toBottomOf="@id/staff_header_text_view"
                tools:itemCount="4"
                tools:listitem="@layout/staff_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>